# PromptCLI

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/secrets/: mod.rs
src-tauri/src/session/: mod.rs
src-tauri/src/settings/: mod.rs
src/app/: App.tsx
src/features/onboarding/: OnboardingScreen.tsx
src/features/promptcli/: PlanPreview.tsx  PromptBar.tsx  PromptComposer.tsx
src/features/settings/: SettingsScreen.tsx
src/features/terminal/: TabStrip.tsx  TerminalView.tsx  TerminalWorkspace.tsx
src/lib/: contracts.ts
src/lib/intents/: builders.ts  matchers.ts
src/lib/planner/: classifyInput.ts  index.ts  normalize.ts
src/lib/policy/: risk.ts
src/lib/providers/: anthropic.ts  catalog.ts  index.ts  openai.ts  types.ts
src/lib/settings/: defaults.ts
src/lib/tauri/: bridge.ts
src/styles/: global.css
tests/unit/: classify-input.test.ts  intents.test.ts  planner.test.ts  policy.test.ts
