[package]
name = "promptcli"
version = "0.1.0"
description = "A natural-language terminal for macOS and Windows"
authors = ["PromptCLI"]
edition = "2021"

[lib]
name = "promptcli_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
anyhow = "1.0.93"
keyring = "3.6.1"
portable-pty = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.1.1", features = [] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "sync", "time"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
